--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Entities\Account.cs" />
     <Compile Include="Entities\CheckIn.cs" />
+    <Compile Include="Entities\CheckInDataGuest.cs" />
     <Compile Include="Entities\CheckInServices.cs" />
     <Compile Include="Entities\AccountData.cs" />
     <Compile Include="Entities\GuestData.cs" />
