--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -48,12 +48,14 @@
     <Compile Include="Interfaces\IAuthorizationService.cs" />
     <Compile Include="Interfaces\IConvertationService.cs" />
     <Compile Include="Interfaces\IDbCrud.cs" />
+    <Compile Include="Interfaces\IRegistrationService.cs" />
     <Compile Include="Models\CheckInModel.cs" />
     <Compile Include="Models\CheckInServicesModel.cs" />
-    <Compile Include="Models\SearchModels\FoundAccount.cs" />
+    <Compile Include="Models\RegistrationModels\RegistrationFullData.cs" />
+    <Compile Include="Models\SearchModels\AccountFullData.cs" />
     <Compile Include="Models\AccountModel.cs" />
-    <Compile Include="Models\SearchModels\FoundGuest.cs" />
-    <Compile Include="Models\SearchModels\FoundGuestCheckIn.cs" />
+    <Compile Include="Models\SearchModels\GuestFullData.cs" />
+    <Compile Include="Models\SearchModels\GuestCheckInFullData.cs" />
     <Compile Include="Models\GuestModel.cs" />
     <Compile Include="Models\ModifierModel.cs" />
     <Compile Include="Models\RoomModel.cs" />
@@ -64,6 +66,7 @@
     <Compile Include="ServiceModules\ServiceModule.cs" />
     <Compile Include="Services\AuthorizationService.cs" />
     <Compile Include="Services\ConvertationService.cs" />
+    <Compile Include="Services\RegistrationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
