--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -62,11 +62,15 @@
     <Compile Include="Entities\Guest.cs" />
     <Compile Include="HotelDB.cs" />
     <Compile Include="Interfaces\IDbManager.cs" />
+    <Compile Include="Interfaces\IDirectory.cs" />
     <Compile Include="Interfaces\ILoginRepository.cs" />
+    <Compile Include="Interfaces\IRegistrationRepository.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Entities\Modifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AccountRepository.cs" />
+    <Compile Include="Repositories\CheckInRepository.cs" />
+    <Compile Include="Repositories\CheckInServiceRepository.cs" />
     <Compile Include="Repositories\DbManager.cs" />
     <Compile Include="Repositories\GuestRepository.cs" />
     <Compile Include="Repositories\LoginRepository.cs" />
@@ -74,6 +78,10 @@
     <Compile Include="Entities\Room.cs" />
     <Compile Include="Entities\RoomType.cs" />
     <Compile Include="Entities\Service.cs" />
+    <Compile Include="Repositories\RegistrationRepository.cs" />
+    <Compile Include="Repositories\RoomRepository.cs" />
+    <Compile Include="Repositories\RoomTypeRepository.cs" />
+    <Compile Include="Repositories\ServiceRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
