--- a/HotelManagement/HotelManagement.csproj
+++ b/HotelManagement/HotelManagement.csproj
@@ -78,18 +78,26 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Converters\LoginDataMultiConverter.cs" />
+    <Compile Include="Converters\RegistrationDataMultiConverter.cs" />
     <Compile Include="Guest\CurrentGuest.cs" />
+    <Compile Include="Guest\CurrentRegistration.cs" />
     <Compile Include="Guest\IGuest.cs" />
+    <Compile Include="Guest\IRegistration.cs" />
     <Compile Include="IoC\IoC.cs" />
     <Compile Include="IoC\NinjectRegistrations.cs" />
     <Compile Include="Navigation\INavigation.cs" />
     <Compile Include="Navigation\MainNavigation.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="Structures\LoginData.cs" />
+    <Compile Include="Structures\RegistrationData.cs" />
     <Compile Include="ViewModels\VMBase.cs" />
     <Compile Include="ViewModels\VMGuestPage.cs" />
     <Compile Include="ViewModels\VMLoginPage.cs" />
     <Compile Include="ViewModels\VMMainWindow.cs" />
+    <Compile Include="ViewModels\VMRegistrationPage.cs" />
+    <Compile Include="Views\Pages\RegistrationPage.xaml.cs">
+      <DependentUpon>RegistrationPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Pages\Tables\CheckInTable.xaml.cs">
       <DependentUpon>CheckInTable.xaml</DependentUpon>
     </Compile>
@@ -97,6 +105,10 @@
       <DependentUpon>GuestPage.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\Pages\AdminPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Pages\RegistrationPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -151,14 +163,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Views\Pages\RegistrationPage.xaml">
+    <Page Include="Views\Pages\CheckInPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Views\Pages\RegistrationPage.xaml.cs">
-      <DependentUpon>RegistrationPage.xaml</DependentUpon>
+    <Compile Include="Views\Pages\CheckInPage.xaml.cs">
+      <DependentUpon>CheckInPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
