Deleted guest+registration, changed DAL

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -48,14 +48,11 @@
     <Compile Include="Interfaces\IAuthorizationService.cs" />
     <Compile Include="Interfaces\IConvertationService.cs" />
     <Compile Include="Interfaces\IDbCrud.cs" />
-    <Compile Include="Interfaces\IRegistrationService.cs" />
     <Compile Include="Models\CheckInModel.cs" />
     <Compile Include="Models\CheckInServicesModel.cs" />
-    <Compile Include="Models\RegistrationModels\RegistrationFullData.cs" />
     <Compile Include="Models\SearchModels\AccountFullData.cs" />
     <Compile Include="Models\AccountModel.cs" />
-    <Compile Include="Models\SearchModels\GuestFullData.cs" />
-    <Compile Include="Models\SearchModels\GuestCheckInFullData.cs" />
+    <Compile Include="Models\SearchModels\CheckInFullData.cs" />
     <Compile Include="Models\GuestModel.cs" />
     <Compile Include="Models\ModifierModel.cs" />
     <Compile Include="Models\RoomModel.cs" />
@@ -66,7 +63,6 @@
     <Compile Include="ServiceModules\ServiceModule.cs" />
     <Compile Include="Services\AuthorizationService.cs" />
     <Compile Include="Services\ConvertationService.cs" />
-    <Compile Include="Services\RegistrationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
