Revert "Merge pull request #3 from Flamious/GetRidOfGuest"
This reverts commit 24d4e82d835a985d248130b0a4a8d695fba0a28e, reversing
changes made to 787cab12309b9c32deb345f099a462f18099b370.

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -54,17 +54,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Account.cs" />
-    <Compile Include="Entities\Adult.cs" />
     <Compile Include="Entities\CheckIn.cs" />
+    <Compile Include="Entities\Data\CheckInDataGuest.cs" />
     <Compile Include="Entities\CheckInServices.cs" />
-    <Compile Include="Entities\Child.cs" />
-    <Compile Include="Entities\Data\CheckInData.cs" />
     <Compile Include="Entities\Data\AccountData.cs" />
+    <Compile Include="Entities\Data\GuestData.cs" />
     <Compile Include="Entities\Guest.cs" />
     <Compile Include="HotelDB.cs" />
     <Compile Include="Interfaces\IDbManager.cs" />
     <Compile Include="Interfaces\IDirectory.cs" />
     <Compile Include="Interfaces\ILoginRepository.cs" />
+    <Compile Include="Interfaces\IRegistrationRepository.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Entities\Modifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -75,12 +75,13 @@
     <Compile Include="Repositories\GuestRepository.cs" />
     <Compile Include="Repositories\LoginRepository.cs" />
     <Compile Include="Repositories\ModifierRepository.cs" />
-    <Compile Include="Repositories\RoomRepository.cs" />
-    <Compile Include="Repositories\RoomTypeRepository.cs" />
-    <Compile Include="Repositories\ServiceRepository.cs" />
     <Compile Include="Entities\Room.cs" />
     <Compile Include="Entities\RoomType.cs" />
     <Compile Include="Entities\Service.cs" />
+    <Compile Include="Repositories\RegistrationRepository.cs" />
+    <Compile Include="Repositories\RoomRepository.cs" />
+    <Compile Include="Repositories\RoomTypeRepository.cs" />
+    <Compile Include="Repositories\ServiceRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
