--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -54,9 +54,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Account.cs" />
+    <Compile Include="Entities\Adult.cs" />
     <Compile Include="Entities\CheckIn.cs" />
-    <Compile Include="Entities\Data\CheckInDataGuest.cs" />
+    <Compile Include="Entities\CheckInGuest.cs" />
     <Compile Include="Entities\CheckInServices.cs" />
+    <Compile Include="Entities\Child.cs" />
+    <Compile Include="Entities\Data\CheckInDataGuest.cs" />
     <Compile Include="Entities\Data\AccountData.cs" />
     <Compile Include="Entities\Guest.cs" />
     <Compile Include="HotelDB.cs" />
@@ -67,18 +70,21 @@
     <Compile Include="Entities\Modifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AccountRepository.cs" />
+    <Compile Include="Repositories\AdultRepository.cs" />
+    <Compile Include="Repositories\CheckInGuestRepository.cs" />
     <Compile Include="Repositories\CheckInRepository.cs" />
     <Compile Include="Repositories\CheckInServiceRepository.cs" />
+    <Compile Include="Repositories\ChildRepository.cs" />
     <Compile Include="Repositories\DbManager.cs" />
     <Compile Include="Repositories\GuestRepository.cs" />
     <Compile Include="Repositories\LoginRepository.cs" />
     <Compile Include="Repositories\ModifierRepository.cs" />
-    <Compile Include="Entities\Room.cs" />
-    <Compile Include="Entities\RoomType.cs" />
-    <Compile Include="Entities\Service.cs" />
     <Compile Include="Repositories\RoomRepository.cs" />
     <Compile Include="Repositories\RoomTypeRepository.cs" />
     <Compile Include="Repositories\ServiceRepository.cs" />
+    <Compile Include="Entities\Room.cs" />
+    <Compile Include="Entities\RoomType.cs" />
+    <Compile Include="Entities\Service.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
