--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -48,15 +48,11 @@
     <Compile Include="Interfaces\IAuthorizationService.cs" />
     <Compile Include="Interfaces\IConvertationService.cs" />
     <Compile Include="Interfaces\IDbCrud.cs" />
+    <Compile Include="Models\AdultModel.cs" />
     <Compile Include="Models\CheckInModel.cs" />
-    <Compile Include="Models\CheckInServicesModel.cs" />
-    <Compile Include="Models\SearchModels\AccountFullData.cs" />
-    <Compile Include="Models\AccountModel.cs" />
-    <Compile Include="Models\SearchModels\GuestCheckInFullData.cs" />
+    <Compile Include="Models\ChildModel.cs" />
     <Compile Include="Models\GuestModel.cs" />
-    <Compile Include="Models\ModifierModel.cs" />
-    <Compile Include="Models\RoomModel.cs" />
-    <Compile Include="Models\RoomTypeModel.cs" />
+    <Compile Include="Models\SearchModels\AccountFullData.cs" />
     <Compile Include="Models\ServiceModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceModules\IoC.cs" />
