--- a/HotelManagement/HotelManagement.csproj
+++ b/HotelManagement/HotelManagement.csproj
@@ -77,21 +77,49 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CheckInMaking\CheckInGuest.cs" />
+    <Compile Include="CheckInMaking\CheckInRoom.cs" />
+    <Compile Include="CheckInMaking\ICheckInGuest.cs" />
+    <Compile Include="CheckInMaking\ICheckInRoom.cs" />
+    <Compile Include="CompleteCheckInModel\CompleteCheckIn.cs" />
+    <Compile Include="CompleteCheckInModel\ICompleteCheckIn.cs" />
+    <Compile Include="Converters\GuestInfoConverter.cs" />
     <Compile Include="Converters\LoginDataMultiConverter.cs" />
     <Compile Include="IoC\IoC.cs" />
     <Compile Include="IoC\NinjectRegistrations.cs" />
     <Compile Include="Navigation\INavigation.cs" />
     <Compile Include="Navigation\MainNavigation.cs" />
     <Compile Include="RelayCommand.cs" />
+    <Compile Include="Structures\GuestDocuments.cs" />
     <Compile Include="Structures\LoginData.cs" />
     <Compile Include="Structures\RegistrationData.cs" />
+    <Compile Include="Structures\Roominess.cs" />
+    <Compile Include="Structures\ServiceData.cs" />
+    <Compile Include="ViewModels\VMAdmit.cs" />
     <Compile Include="ViewModels\VMBase.cs" />
+    <Compile Include="ViewModels\VMCheckInGuestsPage.cs" />
+    <Compile Include="ViewModels\VMCheckInRoomPage.cs" />
+    <Compile Include="ViewModels\VMEmployee.cs" />
     <Compile Include="ViewModels\VMLoginPage.cs" />
     <Compile Include="ViewModels\VMMainWindow.cs" />
+    <Compile Include="Views\Pages\AdmitCheckInPage.xaml.cs">
+      <DependentUpon>AdmitCheckInPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Pages\GuestPage.xaml.cs">
+      <DependentUpon>GuestPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Pages\Tables\CheckInTable.xaml.cs">
       <DependentUpon>CheckInTable.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\Pages\AdminPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Pages\AdmitCheckInPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Pages\GuestPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
