Added edit button and guest validation

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Models\CheckinModel\ServiceData.cs" />
     <Compile Include="Models\CheckInServiceModel.cs" />
     <Compile Include="Models\GuestModel.cs" />
+    <Compile Include="Models\RoomModel.cs" />
     <Compile Include="Models\RoomTypeModel.cs" />
     <Compile Include="Models\SearchModels\AccountFullData.cs" />
     <Compile Include="Models\SearchModels\RoomCheckInData.cs" />
