Changed BLL and DAL

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -47,13 +47,13 @@
     <Compile Include="DbCrud.cs" />
     <Compile Include="Interfaces\IAuthorizationService.cs" />
     <Compile Include="Interfaces\ICheckInService.cs" />
-    <Compile Include="Interfaces\IConvertationService.cs" />
     <Compile Include="Interfaces\IDbCrud.cs" />
     <Compile Include="Interfaces\IDbInfo.cs" />
     <Compile Include="Models\CheckInGuestModel.cs" />
     <Compile Include="Models\CheckInModel.cs" />
     <Compile Include="Models\CheckinModel\CheckInInfo.cs" />
     <Compile Include="Models\CheckinModel\CompleteCheckIn.cs" />
+    <Compile Include="Models\CheckinModel\RoomData.cs" />
     <Compile Include="Models\CheckinModel\ServiceData.cs" />
     <Compile Include="Models\CheckInServiceModel.cs" />
     <Compile Include="Models\GuestModel.cs" />
@@ -67,7 +67,6 @@
     <Compile Include="ServiceModules\ServiceModule.cs" />
     <Compile Include="Services\AuthorizationService.cs" />
     <Compile Include="Services\CheckInService.cs" />
-    <Compile Include="Services\ConvertationService.cs" />
     <Compile Include="Services\DbInfoService.cs" />
   </ItemGroup>
   <ItemGroup>
